fixed spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,7 +144,7 @@ h3 {
   text-align: center;
   flex-wrap: nowrap;
   /* margin-top: 1%; */
-  margin-bottom: 0.25%;
+  margin-bottom: 0.35%;
   margin-top: 2.5%;
 }
 
